--- a/app/search.twig
+++ b/app/search.twig
@@ -254,18 +254,16 @@
 		</div>
 	</div>
 
-	<div class="search-detail thumb-list">
+	<div class="search-detail">
 		<h3 class="project-title">Starhill</h3>
 		<div class="row">
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -280,14 +278,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -302,14 +298,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -324,14 +318,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -346,14 +338,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<a class="thumb-mask" href="#">
 						View all<br /> Starhill Listings(20)
@@ -365,14 +355,12 @@
 		<h3 class="project-title">Sunrise City</h3>
 		<div class="row">
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -387,14 +375,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -409,14 +395,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -431,14 +415,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<span class="price-tag">$600</span>
 				</div>
@@ -453,14 +435,12 @@
 				</div>
 			</div>
 			<div class="thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
+				<div class="thumb-gallery" data-module="ThumbSlide">
+					<ul class="thumb-list slider-wrapper">
+						<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+						<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
+					</ul>
 					<span class="love"><i class="fa fa-heart-o"></i></span>
 					<a class="thumb-mask" href="#">
 						View all<br /> Starhill Listings(20)
@@ -471,84 +451,9 @@
 	</div>
 </section>
 
-<div class="map-result" id="map">
-
+<div class="container map-result" data-module="GoogleMapAPI">
+	<div id="map" style="height: 100vh"></div>
 </div>
-<script type="text/javascript">
-
-var apartment = [
-{
-	name:'abc',
-	price:'$200',
-	address: '232/22 asdas' ,
-	position:{lat: 10.785, lng: 106.701}
-}
-];
-
-function initMap() {
-	var map = new google.maps.Map(document.getElementById('map'), {
-		zoom: 17,
-		center: apartment[0].position
-	});
-
-
-	// var marker = new google.maps.Marker({
-	// 	position: apartment[0].position,
-	// 	map: map
-	// });
-
-	var contentPopup = '<div class="thumb-item">'+
-	'<div class="thumb-gallery">'+
-	'<div class="thumb-slide" data-module="ThumbSlide">'+
-	'<ul class="thumb-img slider-wrapper">'+
-	'<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>'+
-	'<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>'+
-	'<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>'+
-	'</ul>'+
-	'</div>'+
-	'<span class="love"><i class="fa fa-heart-o"></i></span>'+
-	'<span class="price-tag">$600</span>'+
-	'</div>'+
-	'<div class="thumb-info">'+
-	'<h4>house code 456</h4>'+
-	'<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>'+
-	'<div class="thumb-service">'+
-	'<span><i class="fa fa-map-marker"></i> District 7</span>'+
-	'<span><i class="fa fa-bed"></i> 1 bed </span>'+
-	'<span><i class="fa fa-bath"></i> 1 bath</span>          '+
-	'</div>'+
-	'</div>'+
-	'</div>';
-
-	var contentPrice =  "<strong>"+ apartment[0].price+"</strong>";
-
-	// var markPrice = new google.maps.InfoWindow({
-	// 	position: apartment[0].position,
-	// 	content: contentPrice,
-	// 	map:map
-	// });
-
-	var infowindow = new google.maps.InfoWindow({
-		content: contentPopup
-	});
-
-	var marker = new google.maps.Marker({
-		position: apartment[0].position,
-		map: map
-	});
-
-	marker.addListener('click', function() {
-		infowindow.open(map, marker);
-	});
-
-}
-
-</script>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwnpZ3COgfRLoO4wEEK2qjYJpUqj8eY4E&callback=initMap">
-</script>
-
-
 
 
 
