--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -26,23 +26,19 @@
 </head>
 
 <body>
+  <script>
+    window.isIE = false;
+    // detect IE >= 10
+    if((navigator.userAgent.indexOf("MSIE") != -1 ) || (!!document.documentMode == true )) {
+      window.isIE = true;
+    }
+    window.miloAPI = "https://milo-vietnam.asiadigitalhub.com/milo_redemption_api/redemption/";
+    window.accessToken = "ce088026e1e29bbe6d48d3bfc719ec89";
+    window.iconMilo = 'https://milo-vietnam.asiadigitalhub.com/sites/milo-global-vietnam/themes/milo_redemption/images/icons/icon-milo.png';
+    window.errorNotify = '';
+    window.errorBrowse = '';
 
-<div class="loader ">
-  <div class="sk-fading-circle">
-    <div class="sk-circle1 sk-circle"></div>
-    <div class="sk-circle2 sk-circle"></div>
-    <div class="sk-circle3 sk-circle"></div>
-    <div class="sk-circle4 sk-circle"></div>
-    <div class="sk-circle5 sk-circle"></div>
-    <div class="sk-circle6 sk-circle"></div>
-    <div class="sk-circle7 sk-circle"></div>
-    <div class="sk-circle8 sk-circle"></div>
-    <div class="sk-circle9 sk-circle"></div>
-    <div class="sk-circle10 sk-circle"></div>
-    <div class="sk-circle11 sk-circle"></div>
-    <div class="sk-circle12 sk-circle"></div>
-  </div>
-</div>
+  </script>
 <!-- HEADER -->
 {% include 'header.twig' %}
 <!-------------------->
