--- a/app/search.twig
+++ b/app/search.twig
@@ -496,16 +496,16 @@ var apartment = [
 function initMap() {
 	var map = new google.maps.Map(document.getElementById('map'), {
 		zoom: 17,
+		gestureHandling: 'greedy',
 		center: apartment[0].position
 	});
 
 
-	// var marker = new google.maps.Marker({
-	// 	position: apartment[0].position,
-	// 	map: map
-	// });
 
-	var contentPopup = '<div class="thumb-item">'+
+	var contentPopup = 
+	'<div class="wrap-popup">' +
+	'<strong>'+ apartment[0].price +'</strong>' +
+	'<div class="thumb-item" style="display:none">'+
 	'<div class="thumb-gallery">'+
 	'<div class="thumb-slide" data-module="ThumbSlide">'+
 	'<ul class="thumb-img slider-wrapper">'+
@@ -523,27 +523,29 @@ function initMap() {
 	'<div class="thumb-service">'+
 	'<span><i class="fa fa-map-marker"></i> District 7</span>'+
 	'<span><i class="fa fa-bed"></i> 1 bed </span>'+
-	'<span><i class="fa fa-bath"></i> 1 bath</span>          '+
+	'<span><i class="fa fa-bath"></i> 1 bath</span>'+
+	'</div>'+
 	'</div>'+
 	'</div>'+
 	'</div>';
 
-	var contentPrice =  "<strong>"+ apartment[0].price+"</strong>";
-
-	// var markPrice = new google.maps.InfoWindow({
-	// 	position: apartment[0].position,
-	// 	content: contentPrice,
-	// 	map:map
-	// });
-
-	var infowindow = new google.maps.InfoWindow({
-		content: contentPopup
-	});
+	// var contentPrice =  "<strong id=''>"+ apartment[0].price+"</strong>";
 
 	var marker = new google.maps.Marker({
 		position: apartment[0].position,
 		map: map
 	});
+
+	var markPrice = new google.maps.InfoWindow({
+		position: apartment[0].position,
+		content: contentPopup,
+		map:map
+	});
+
+	var infowindow = new google.maps.InfoWindow({
+		content: contentPopup
+	});
+
 
 	marker.addListener('click', function() {
 		infowindow.open(map, marker);
@@ -553,8 +555,11 @@ function initMap() {
 
 </script>
 
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBwnpZ3COgfRLoO4wEEK2qjYJpUqj8eY4E&callback=initMap">
 </script>
+
+
 
 
 
