--- a/app/listing.twig
+++ b/app/listing.twig
@@ -3,12 +3,12 @@
 {% block page %}
 <div class="container">
 
-  <ul class="nav nav-pills nav-stacked">
+ <!--  <ul class="nav nav-pills nav-stacked">
     <li><a href="#galleryDetail" data-toggle="modal">Open Lightbox</a></li>
     <li><a href="#galleryDetail" data-toggle="modal" data-slide-to="1">2nd Image</a></li>
     <li><a href="#galleryDetail" data-toggle="modal" data-slide-to="2">3rd Image</a></li>
     <li><a href="#galleryDetail" data-toggle="modal" data-slide-to="15">Open non existing Image</a></li>
-  </ul>
+  </ul> -->
 
 
 
