--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -7,8 +7,11 @@
 }
 
 .banner-wrapper {
-	max-width: 850px;
-	margin: 10% auto 0;
+	position: absolute;
+	width: 850px;
+	@include absolute( top 50% left 50%);
+	transform:translate(-50%, -50%);
+
 	h1 {
 		color: #fff;
 		font-size: $size-xxxl;
