--- a/app/search.twig
+++ b/app/search.twig
@@ -465,166 +465,40 @@
 	window.storeInfo = [
     {
       "name": "store name",
-      "address": "123 Le Quy Don, P.9, Q.3",
+      "address": "1 Le Quy Don, P.9, Q.3",
       "city": "Ho Chi Minh",
       "default": true,
-      "gift": 2112,
+      "price": "$600",
       "isOpen": true,
       "location": {
-        "lng": 106.67594305726,
+        "lng": 106.67094305726,
         "lat": 10.750648587535
       },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "1-1-2018",
-        "2-1-2018",
-        "3-1-2018",
-        "6-1-2018",
-        "7-1-2018",
-        "22-1-2018"
-      ]
-    },
-    {
-      "name": "store name2",
-      "address": "123 Le Quy Don, P.9, Q.3",
+      "img": "vinhomes-central-park.png"
+    },{
+      "name": "store name 2",
+      "address": "2 Le Quy Don, P.9, Q.3",
       "city": "Ho Chi Minh",
-      "default": false,
-      "gift": 2112,
+      "default": true,
+      "price": "$700",
       "isOpen": false,
       "location": {
-        "lng": 106.67332762282,
-        "lat": 10.74538376556
+        "lng": 106.68009490812,
+        "lat": 10.74030300056
       },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "1-1-2018",
-        "2-1-2018",
-        "3-1-2018",
-        "6-1-2018",
-        "13-1-2018",
-        "19-1-2018"
-      ]
-    },
-    {
-      "name": "store name2",
-      "address": "123 Le Quy Don, P.9, Q.3",
+      "img": "vinhomes-central-park.png"
+    },{
+      "name": "store name 3",
+      "address": "3 Le Quy Don, P.9, Q.3",
       "city": "Ho Chi Minh",
-      "default": false,
-      "gift": 2112,
-      "isOpen": true,
-      "location": {
-        "lng": 106.68049497812,
-        "lat": 10.74538376556
-      },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "1-1-2018",
-        "6-1-2018",
-        "13-1-2018",
-        "23-1-2018"
-      ]
-    },
-    {
-      "name": "store name3",
-      "address": "123 Le Quy Don, P.9, Q.3",
-      "city": "Ha Noi",
       "default": true,
-      "gift": 2112,
+      "price": "$800",
       "isOpen": false,
       "location": {
-        "lng": 105.801944,
-        "lat": 21.022736
+        "lng": 106.60009490812,
+        "lat": 10.74530300056
       },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "13-1-2018",
-        "14-1-2018"
-      ]
-    },
-    {
-      "name": "store name3",
-      "address": "123 Le Quy Don, P.9, Q.3",
-      "city": "Can Tho",
-      "default": true,
-      "gift": 2112,
-      "isOpen": false,
-      "location": {
-        "lng": 105.7225506,
-        "lat": 10.0341851
-      },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "13-1-2018",
-        "14-1-2018"
-      ]
-    },
-    {
-      "name": "store name3",
-      "address": "123 Le Quy Don, P.9, Q.3",
-      "city": "Can Tho",
-      "default": false,
-      "gift": 2112,
-      "isOpen": false,
-      "location": {
-        "lng": 105.7235506,
-        "lat": 10.0353851
-      },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "13-1-2018",
-        "14-1-2018"
-      ]
-    },
-    {
-      "name": "store name3",
-      "address": "123 Le Quy Don, P.9, Q.3",
-      "city": "Can Tho",
-      "default": false,
-      "gift": 2112,
-      "isOpen": true,
-      "location": {
-        "lng": 105.7335506,
-        "lat": 10.0353851
-      },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "13-1-2018",
-        "14-1-2018"
-      ]
-    },
-    {
-      "name": "store name3",
-      "address": "123 Le Quy Don, P.9, Q.3",
-      "city": "Da Nang",
-      "default": true,
-      "gift": 2112,
-      "isOpen": false,
-      "location": {
-        "lng": 108.1716863,
-        "lat": 16.0471659
-      },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "13-1-2018",
-        "14-1-2018"
-      ]
-    },
-    {
-      "name": "store name3",
-      "address": "123 Le Quy Don, P.9, Q.3",
-      "city": "Da Nang",
-      "default": false,
-      "gift": 2112,
-      "isOpen": false,
-      "location": {
-        "lng": 108.1816863,
-        "lat": 16.0461659
-      },
-      "opentime": "8AM - 10PM",
-      "opendates": [
-        "13-1-2018",
-        "14-1-2018"
-      ]
+      "img": "vinhomes-central-park.png"
     }
   ];
 </script>
