--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -178,7 +178,7 @@
 
   background: #fff;
   padding: 2px 10px;
-  text-align: center;
+  text-align: left;
   font-weight: bold;
   font-size: 18px;
   &:hover {
@@ -187,12 +187,12 @@
   &.show {
     z-index: 99;
     transform: translate(-50%, -100%);
-    background-color: transparent;
   }
   .popup__image {
-    width: 50px;
+    width: 300px;
     display: block;
     opacity: 1;
+    margin-top: 10px;
     transition: all .5s ease;
   }
   .popup-wrapper {
@@ -204,15 +204,11 @@
     }
   }
   .show-popup {
-    .popup__image {
-      opacity: 0;
-      display: none;
-    }
     &.popup-wrapper {
       cursor: context-menu;
       display: block;
       opacity: 1;
-      width: 200px;
+      max-width: 300px;
       transition: all .5s ease-in-out;
       .popup__close {
         cursor: pointer;
