--- a/app/search.twig
+++ b/app/search.twig
@@ -464,41 +464,45 @@
 <script>
 	window.storeInfo = [
     {
+    	"code": "MH021",
       "name": "store name",
-      "address": "1 Le Quy Don, P.9, Q.3",
       "city": "Ho Chi Minh",
       "default": true,
       "price": "$600",
       "isOpen": true,
+      "linkAp": "#",
       "location": {
         "lng": 106.67094305726,
         "lat": 10.750648587535
       },
-      "img": "vinhomes-central-park.png"
+      "images": ["vinhomes-central-park.png","lexington-residence.png","vinhomes-central-park.png"]
     },{
+    	"code": "MH022",
       "name": "store name 2",
-      "address": "2 Le Quy Don, P.9, Q.3",
       "city": "Ho Chi Minh",
       "default": true,
       "price": "$700",
       "isOpen": false,
+      "linkAp": "#",
       "location": {
-        "lng": 106.68009490812,
+        "lng": 106.66009490812,
         "lat": 10.74030300056
       },
-      "img": "vinhomes-central-park.png"
-    },{
+      "images": ["lexington-residence.png","vinhomes-central-park.png","lexington-residence.png"]
+    },
+    {
+    	"code": "MH023",
       "name": "store name 3",
-      "address": "3 Le Quy Don, P.9, Q.3",
       "city": "Ho Chi Minh",
       "default": true,
       "price": "$800",
       "isOpen": false,
+      "linkAp": "#",
       "location": {
-        "lng": 106.60009490812,
-        "lat": 10.74530300056
+        "lng": 106.68009490812,
+        "lat": 10.74030300056
       },
-      "img": "vinhomes-central-park.png"
+      "images": ["lexington-residence.png","vinhomes-central-park.png","lexington-residence.png"]
     }
   ];
 </script>
