--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -3,6 +3,10 @@
     <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
     <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
   </a>
+  <form id="searchHeader" class="wrapper-inputtags">
+    <input type="text" value="ThaoDien" id="search-header" data-role="tagsinput" />
+    <button class="btn-close"><i class="fa fa-close"></i></button>
+  </form>
   <nav>
     <a href="javascript:void(0);" class="btn-burger">
       <span>Menu</span>
