--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -63,13 +63,15 @@
 <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
 <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<script src="/bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script src="{{assetPath}}/js/app.js"></script>
 
-<script src="http://www.youtube.com/player_api"></script>
+<script src="{{assetPath}}/js/lib/bootstrap-tagsinput.js"></script>
 
 
 </body>
