--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -1,6 +1,27 @@
+.modal {
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-dialog {
+  margin: 6% auto 0;
+}
 .modal-dialog {
   max-width: 80%;
   color: #fff;
+  
+  .slick-arrow {
+    font-size: 0;
+    position: absolute;
+    top: -350%;
+    right: -50px;
+    z-index: 10;
+  }
+  .slick-prev {
+    left: -45px;
+  }
+  h3 {
+    text-transform: none;
+  }
 }
 
 .modal-content {
@@ -8,9 +29,13 @@
   .thumb-service {
     color: #fff;
     span {
-      
+
     }
   }
+}
+
+.gallery__info {
+  padding-left: 40px;
 }
 
 .gallery__slide {
@@ -21,6 +46,7 @@
   }
   li {
     overflow: hidden;
+    background: rgba(0, 0, 0, 0.75);
   }
 }
 
